--- a/packages/frontend/src/globals/css/main.scss
+++ b/packages/frontend/src/globals/css/main.scss
@@ -1487,6 +1487,10 @@
     &.dublicate::before{
       content: "\e947";
     }
+    &.localcomplianceofficer::before{
+      content: '\e977'
+    }
+    
   }
 
   .active-status {
