--- a/packages/code-space-mfe/src/components/AllCodeSpaces.scss
+++ b/packages/code-space-mfe/src/components/AllCodeSpaces.scss
@@ -62,12 +62,11 @@
 
         .configIcon {
             margin-left: 8px;
-            display: flex;
             align-items: center;
 
             i {
-                margin-top: -5px;
                 margin-right: 2px;
+                transform: translateY(-2px);
             }
         }
 
@@ -115,6 +114,7 @@
             width: calc(33% - 15px);
             margin: 0 15px 15px 0;
             min-width: 250px;
+            min-height: 300px;
             position: relative;
             border: 1px solid #383F49;
             cursor: pointer;
