changed FrontEnd technology to tag component

--- a/packages/frontend/src/components/mbc/createNewReport/description/Description.scss
+++ b/packages/frontend/src/components/mbc/createNewReport/description/Description.scss
@@ -17,6 +17,10 @@
       width: calc(50% - 7px);
     }
   }
+  
+  .procedureId{
+    margin-top: 22px;
+  }
 
   .formWrapper {
     margin: 60px 70px 0;
