--- a/packages/code-space-mfe/src/components/AllCodeSpaces.scss
+++ b/packages/code-space-mfe/src/components/AllCodeSpaces.scss
@@ -65,6 +65,17 @@
             margin-bottom: 2.5px;
             display: inline;
         }
+        .tutorials{
+            display: inline;
+            margin-left: 8px;
+            span{
+                margin: 0px;
+                margin-right: 1px;
+            }
+            .trainingIcon{
+                font-size: 12px;
+            }
+        }
 
         i {
             font-size: var(--font-size-icon-content);
