added tutorails url to config file and added sort icon in main css file

--- a/packages/frontend/src/globals/css/main.scss
+++ b/packages/frontend/src/globals/css/main.scss
@@ -1257,6 +1257,10 @@
       content: "\e903";
     }
 
+    &.sort:before {
+      content: "\e912";
+    }
+
     &.workspace:before {
       content: "\e931";
     }
