--- a/packages/code-space-mfe/src/components/codeSpaceTutorials/CodeSpaceTutorials.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceTutorials/CodeSpaceTutorials.scss
@@ -8,7 +8,6 @@
 
   .rightPlane {
     flex: 0 0 30%;
-    margin-left: 10px;
   }
 }
 
@@ -53,7 +52,7 @@
   padding-left: 0px;
 }
 
-.title {
+.Modeltitle {
   font-size: 23px;
 }
 
