report bug fixes

--- a/packages/frontend/src/components/mbc/createNewReport/description/Description.scss
+++ b/packages/frontend/src/components/mbc/createNewReport/description/Description.scss
@@ -62,3 +62,10 @@
 .similarReportInfo {
   color: var(--color-orange);
 }
+
+.divWrapper{
+  margin-top: 4px;
+}
+.procedureIdError{
+  margin-top: -9px !important;
+}
