add warning message in public recipe

--- a/packages/code-space-mfe/src/components/codeSpaceRecipe/CodeSpaceRecipe.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceRecipe/CodeSpaceRecipe.scss
@@ -235,3 +235,14 @@
   opacity: 0.5;
   pointer-events: none;
 }
+.publicWarning {
+  i {
+    color: #FFEB3B;
+  }
+  pre {
+    display: inline;
+  }
+  li {
+    margin-bottom: 5px;
+  }
+}
