--- a/packages/code-space-mfe/src/components/CodeSpace.scss
+++ b/packages/code-space-mfe/src/components/CodeSpace.scss
@@ -125,6 +125,21 @@
     }
   }
 
+  .btnOutline {
+    background: none;
+    border: none !important;
+    color: #c0c8d0;
+    height: auto;
+    outline: none;
+    padding: 0 2px;
+    margin-left: 4px;
+    margin-bottom: 5px;
+    i {
+      font-size: 7px !important;
+    }
+  }
+  
+
   .trigger {
     display: inline-block;
     padding: 2px 10px;
