fabric bug fixes

--- a/packages/fabric-mfe/src/components/requestWorkspace/request-workspace.scss
+++ b/packages/fabric-mfe/src/components/requestWorkspace/request-workspace.scss
@@ -202,9 +202,7 @@
   }
 }
 .reasonContainer {
-  padding: 10px 15px;
-  border: 1px solid #697582;
-  min-height: 100px;
+  color: #acb8c4;
   margin-bottom: 20px;
 }
 .subTitle {
