--- a/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -258,9 +258,28 @@
     pointer-events: none;
   }
 
-  .showIcon{
-    i{
-      font-size: 7px !important;
+  .animation {
+    position: absolute;
+    width: 25px;
+    height: 25px;
+    display: block;
+    border-radius: 50%;
+  }
+
+  .iconWrapper{
+    color: #697582; //Used by ripple animation
+    transition: all 85ms cubic-bezier(0.2, 0.2, 0.38, 0.9) 0s;
+    position: relative;
+    border-radius: 1px;
+    &.open {
+      i{
+        &::before {
+          transform: rotate(-45deg) !important;
+        }
+        &::after {
+          transform: rotate(45deg) !important;
+        }
+      }
     }
   }
   
