--- a/packages/code-space-mfe/src/components/CodeSpace.scss
+++ b/packages/code-space-mfe/src/components/CodeSpace.scss
@@ -142,7 +142,7 @@
   .btnDisabled{
     pointer-events: none;
   }
-  .animation {
+  .animationWrapper {
     position: absolute;
     width: 25px;
     height: 25px;
@@ -150,11 +150,12 @@
     border-radius: 50%;
   }
 
-  .iconWrapper{
+  .collapseIcon{
     color: #697582; //Used by ripple animation
     transition: all 85ms cubic-bezier(0.2, 0.2, 0.38, 0.9) 0s;
     position: relative;
     border-radius: 1px;
+    margin-top: -1.5px;
     &.open {
       i{
         &::before {
@@ -164,6 +165,9 @@
           transform: rotate(45deg) !important;
         }
       }
+    }
+    i{
+      position: relative;
     }
   }
   .trigger {
