--- a/packages/code-space-mfe/src/components/CodeSpace.scss
+++ b/packages/code-space-mfe/src/components/CodeSpace.scss
@@ -151,12 +151,13 @@
   }
 
   .collapseIcon{
-    color: #697582; //Used by ripple animation
+    color:  #00ADEF; //Used by ripple animation
     transition: all 85ms cubic-bezier(0.2, 0.2, 0.38, 0.9) 0s;
     position: relative;
     border-radius: 1px;
     margin-top: -1.5px;
     &.open {
+      color: #697582; //Used by ripple animation
       i{
         &::before {
           transform: rotate(-45deg) !important;
