--- a/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -271,7 +271,9 @@
     transition: all 85ms cubic-bezier(0.2, 0.2, 0.38, 0.9) 0s;
     position: relative;
     border-radius: 1px;
-    margin-top: -1.5px;
+    width: 25px;
+    height: 25px;
+    bottom: 1px; 
     &.open {
       color: #697582; //Used by ripple animation
       i{
@@ -284,6 +286,7 @@
       }
     }
     i{
+      top: 1px; 
       position: relative;
     }
   }
