--- a/packages/power-platform-mfe/src/pages/powerPlatformWorkspaces/power-platform-workspaces.scss
+++ b/packages/power-platform-mfe/src/pages/powerPlatformWorkspaces/power-platform-workspaces.scss
@@ -54,7 +54,17 @@
       }
     }
   }
-
+  .sectionTitle {
+    color: #697582;
+    font-family: Roboto-Medium;
+    font-size: var(--font-size-small);
+    letter-spacing: .5px;
+    border-bottom: 1px solid #697582;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    width: 100%;
+  }
   .createNewArea {
     margin-top: 15px;
     button {
