email use case owner alignment fixes

--- a/packages/frontend/src/components/mbc/filters/FilterWrapper.scss
+++ b/packages/frontend/src/components/mbc/filters/FilterWrapper.scss
@@ -29,19 +29,19 @@
     position: relative;
     .panelWrapper{
         padding: 30px;
-        .filterPanel {
-            display: flex;
-            flex-wrap: wrap;
-            & > div:not(:last-child){
-                width: 135px;
-                margin-right: 15px;
-            }
-            & > div:last-child {
-                display: flex;
-                align-items: flex-end;
-                padding-bottom: 15px;
-            }
-        }
+        // .filterPanel {
+        //     display: flex;
+        //     flex-wrap: wrap;
+        //     & > div:not(:last-child){
+        //         width: 135px;
+        //         margin-right: 15px;
+        //     }
+        //     & > div:last-child {
+        //         display: flex;
+        //         align-items: flex-end;
+        //         padding-bottom: 15px;
+        //     }
+        // }
     }
     
 }
