--- a/packages/code-space-mfe/src/components/deployModal/DeployModal.scss
+++ b/packages/code-space-mfe/src/components/deployModal/DeployModal.scss
@@ -1,4 +1,10 @@
 .deployModal {
+  .wrapper {
+    background:  #1C2026 !important;
+    margin-top: 15px !important;
+    margin-bottom: 15px !important;
+    padding: 20px 20px;
+  }
     .flexLayout {
       display: flex;
       justify-content: space-between;
