--- a/packages/storage-mfe/src/components/Bucket/BucketList.scss
+++ b/packages/storage-mfe/src/components/Bucket/BucketList.scss
@@ -8,6 +8,25 @@
         }
     }
 }
+.AccessIndicator{
+  padding: 2px 8px;
+  border: 1px solid #00adef;
+  color: #00adef;
+  font-size: var(--font-size-icon-small);
+  cursor: pointer;
+  letter-spacing: 1px;
+  border-radius: 2px;
+  margin-right: 15px;
+  height: 20px;
+  margin-top: 10px;
+  margin-left: 19px;
+}
+.cardFooter{
+  margin-top: 10px;
+}
+.accessIndicatorList{
+  margin-top: -3px !important;
+}
 
 .newStorageCard {
   width: calc(25% - 15px);
@@ -77,7 +96,7 @@
   &.disable {
     opacity: 0.5;
   }
-
+ 
   .cardHead {
     display: flex;
     justify-content: space-between;
