--- a/packages/storage-mfe/src/components/Bucket/BucketList.scss
+++ b/packages/storage-mfe/src/components/Bucket/BucketList.scss
@@ -10,8 +10,8 @@
 }
 .AccessIndicator{
   padding: 2px 8px;
-  border: 1px solid #00adef;
-  color: #00adef;
+  border: 1px solid #f3e537;
+  color: #f3e537;
   font-size: var(--font-size-icon-small);
   cursor: pointer;
   letter-spacing: 1px;
@@ -26,6 +26,12 @@
 }
 .accessIndicatorList{
   margin-top: -3px !important;
+}
+.accessContent{
+  h5{
+    font-size: 15px;
+    line-height: 2;
+  }
 }
 
 .newStorageCard {
@@ -402,6 +408,10 @@
             }
         }
     }
+}
+
+.accessCol{
+  width: 100px;
 }
 
 .actionBtnGrp {
