add add recipe button

--- a/packages/code-space-mfe/src/components/AllCodeSpaces.scss
+++ b/packages/code-space-mfe/src/components/AllCodeSpaces.scss
@@ -70,6 +70,14 @@
             }
         }
 
+        .newRecipe {
+            i {
+                color: #676869;
+                margin-left: 8px;
+                margin-right: 1px;
+            }
+        }
+
         i {
             font-size: var(--font-size-icon-content);
             color: #00adef;
