--- a/packages/frontend/src/components/mbc/tools/toolsDetailedPage/ToolsDetailedPage.scss
+++ b/packages/frontend/src/components/mbc/tools/toolsDetailedPage/ToolsDetailedPage.scss
@@ -230,16 +230,21 @@
         font-size: var(--font-size-icon-medium);
       }
 
-      .connectedToList {
-        i {
-          font-size: 25px;
-        }
-
-        h5 {
-          margin-top: 7px;
-          font-family: var(--font-family);
-          font-size: 12px;
-        }
+      .connectionWrapper{
+        display: flex;
+        
+        .connectedToList {
+          i {
+            font-size: 23px;
+          }
+  
+          h5 {
+            margin-top: 7px;
+            font-family: var(--font-family);
+            font-size: 12px;
+            max-width: 10px;
+          }
+        }  
       }
     }
   }
@@ -296,7 +301,7 @@
     padding-left: 24px !important;
     width: calc(66% - 9.5px);
     margin: 6.5px 0 6.5px;
-    height: 300px;
+    min-height: 300px;
     border-radius: 7px;
 
     .serviceInfo {
