made css fix for dataiku tou

--- a/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
+++ b/packages/dss-mfe/src/components/CreateOrEditProject/CreateOrEditProject.scss
@@ -12,23 +12,25 @@
         margin-left: 40px;
     }
 
-    .extolloTou {
+    .touWrapper{
         margin-left: 30px;
-        display: inline-flex;
         position: relative;
-        .touLabel{
-            margin-top: 11px;
-        }
+        .extolloTou {
+            display: inline-flex;
+        
+            .touLabel{
+                margin-top: 11px;
+            }
 
-        .configLink {
-            cursor: pointer;
-            margin-bottom: 10px;
-
-            a {
-                color: #00ADEF !important;
+            .configLink {
+                cursor: pointer;
+                margin-bottom: 10px;
+                  
+                a {
+                    color: #00ADEF !important;
+                }
             }
         }
-
         .errorMsg {
             margin-top: 0px;
             margin-left: 10px;
