--- a/packages/frontend/src/components/mbc/tools/toolsDetailedPage/SubscriptionCard/SubscriptionCard.scss
+++ b/packages/frontend/src/components/mbc/tools/toolsDetailedPage/SubscriptionCard/SubscriptionCard.scss
@@ -1,9 +1,10 @@
 .cardWrapper {
-    padding: 40px;
-    background-image: linear-gradient(14deg, #171A1F, #282b31);;
+    padding: 20px 40px 60px;
+    background-image: linear-gradient(14deg, #13171c, #252a33);
     flex: 1 1 0px;
-     width: 100%;
+    width: 100%;
     margin: 0 15px 15px 0;
+    position: relative;
     .cardIconSection {
         text-align: center;
         margin-top: 35px;
@@ -25,6 +26,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             display: -webkit-box;
+            line-clamp: 1;
             -webkit-line-clamp: 1;
             -webkit-box-orient: vertical;
         }
@@ -34,6 +36,7 @@
             text-overflow: ellipsis;
             overflow: hidden;
             display: -webkit-box;
+            line-clamp: 3;
             -webkit-line-clamp: 3;
             -webkit-box-orient: vertical;
         }
@@ -47,8 +50,8 @@
         text-align: center;
         margin-bottom: 5px; 
         span{
-            font-size: 15px !important;
-            font-family: var(--font-family-bold) !important;
+            font-family: var(--font-family-roboto-medium);
+            font-size: var(--font-size-sub-headline);
             color: #D9DFE4;
 
         }
@@ -84,10 +87,21 @@
         display: block;
         margin-bottom: 8px;
         color: #C0C8D0;
+        text-align: center;
       }
+    pre {
+        text-align: center;
+    }
 }
 .actionWrapper{
-    margin-top: 0px;
-    margin-left: 70px;
-    align-self: center;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    button {
+        min-width: 150px;
+    }
 }
