power platform ui changes

--- a/packages/power-platform-mfe/src/components/powerPlatformEnvironmentCard/power-platform-environment-card.scss
+++ b/packages/power-platform-mfe/src/components/powerPlatformEnvironmentCard/power-platform-environment-card.scss
@@ -127,10 +127,10 @@
         }
 
         .requested {
-          color: #FFEB3B;
+          color: #00adef;
         }
         .approved {
-          color: #00adef;
+          color: #0AE6AB;
         }
         .rejected {
           color: #e94d47;
