--- a/packages/power-platform-mfe/src/components/powerPlatformEnvironmentTable/power-platform-environment-table.scss
+++ b/packages/power-platform-mfe/src/components/powerPlatformEnvironmentTable/power-platform-environment-table.scss
@@ -7,6 +7,10 @@
   cursor: pointer;
   .col1 {
     min-width: 30%;
+    .link {
+      color: #00adef;
+      cursor: pointer;
+    }
   }
   .col2 {
     min-width: 15%;
@@ -22,10 +26,10 @@
     text-align: right;
   }
   .requested {
-    color: #FFEB3B;
+    color: #00adef;
   }
   .approved {
-    color: #00adef;
+    color: #0AE6AB;
   }
   .rejected {
     color: #e94d47;
