--- a/packages/fabric-mfe/src/components/fabricWorkspaceRow/fabric-workspace-row.scss
+++ b/packages/fabric-mfe/src/components/fabricWorkspaceRow/fabric-workspace-row.scss
@@ -32,6 +32,14 @@
       display: inline-block;
     }
   }
+  .completedStatus {
+    margin-bottom: 0;
+    color: #0ae6ab;
+
+    &:hover {
+      color: #0ae6ab;
+    }
+  }
   .col1 {
     min-width: 20%;
   }
