--- a/packages/code-space-mfe/src/components/AllCodeSpaces.scss
+++ b/packages/code-space-mfe/src/components/AllCodeSpaces.scss
@@ -130,7 +130,7 @@
         margin-right: -30px;
 
         .newCodeSpaceCard {
-            width: calc(33% - 15px);
+            width: calc(25% - 15px);
             margin: 0 15px 15px 0;
             min-width: 250px;
             min-height: 300px;
@@ -193,3 +193,39 @@
 .cardsSeparator {
     margin-top: 20px;
 }
+
+.codspaceSearch {
+    margin-left: 200px;
+    .searchInputField {
+        background: none;
+        border: none;
+        border-bottom: 2px solid #383f49;
+        height: 40px;
+        color: #c0c8d0;
+        outline: none;
+        width: 200px;
+        opacity: 1;
+        transition: opacity 85ms cubic-bezier(0.2, 0.2, 0.38, 0.9) 0s;
+        visibility: visible;
+      
+        &::placeholder {
+          color: #697582;
+        }
+      
+        &.hide {
+          opacity: 0;
+          visibility: hidden;
+          transition: visibility 0ms;
+          transition-delay: 100ms;
+        }
+      }
+      .searchIcon{
+        margin-left: -14px;
+        color: #acb8c4;
+      }
+}
+
+  .leftHeader{
+    margin-top: 48px;
+    line-height: 2.75;
+  }
