--- a/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
+++ b/packages/code-space-mfe/src/components/codeSpaceCardItem/CodeSpaceCardItem.scss
@@ -1,6 +1,6 @@
 .codeSpaceCard {
     background: #252a33;
-    width: calc(33% - 15px);
+    width: calc(25% - 15px);
     margin: 0 15px 15px 0;
     min-width: 250px;
     position: relative;
@@ -23,11 +23,10 @@
       .cardHeadInfo {
         width: 100%;
         padding: 0 20px;
-        margin-top: 35px;
+        margin-top: 25px;
         display: flex;
         .cardHeadTitle {
           font-size: var(--font-size-headline);
-          line-height: 23px;
           word-break: break-word;
           padding-right: 10px;
           padding-bottom: 5px;
@@ -74,6 +73,8 @@
       width: 90%;
       margin-left: auto;
       margin-right: auto;
+      margin-top: 13px;
+      margin-bottom: 13px;
     }
     .cardBodySection {
       padding: 15px 20px 20px 20px;
@@ -92,7 +93,7 @@
             margin-bottom: 10px;
           }
           > div:first-child {
-            flex: 1;
+            flex: 0.75;
             font-weight: bold;
             color: #697582;
             font-size: var(--font-size-small);
@@ -292,9 +293,9 @@
   }
   .OpenNewTab {
     display: inline-block;
-    height: 25px;
+    height: 23px;
     position: relative;
-    width: 25px;
+    width: 23px;
     border: 1px solid grey;
     vertical-align: middle;
     margin-left: 10px;
@@ -313,12 +314,12 @@
       text-decoration: none;
     }
     span {
-      width: 16px;
+      width: 15px;
       height: 1px;
       background-color: #c0c8d0;
       position: absolute;
       transform: rotate(314deg);
-      top: 14px;
+      top: 13px;
       left: 1px;
       text-decoration: none;
     }
