--- a/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
+++ b/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
@@ -297,6 +297,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 25px;
 
   .leftPane {
     width: calc(45% - 15px);
