--- a/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
+++ b/packages/code-space-mfe/src/components/newCodeSpace/NewCodeSpace.scss
@@ -309,12 +309,11 @@
 
     .recipeSection {
       height: 210px;
-      padding: 30px;
+      padding-right: 30px;
       padding-top: 10px;
       overflow: auto;
       overflow-x: hidden;
       margin-top: -9px;
-      padding-left: 10px;
 
       &::-webkit-scrollbar-thumb {
         background: #00adef;
