--- a/packages/fabric-mfe/src/pages/fabricWorkspaces/fabric-workspaces.scss
+++ b/packages/fabric-mfe/src/pages/fabricWorkspaces/fabric-workspaces.scss
@@ -15,6 +15,21 @@
     border: 0;
     padding: 0;
   }
+  .trackRequestLink {
+    padding: 0;
+    margin: 0;
+    height: unset;
+    background: unset;
+    border: 0;
+    margin-right: 8px;
+    font-size: var(--font-size-default);
+    border-right: 1px solid #252a33;
+    padding-right: 8px;
+
+    &:hover {
+      color: #00adef;
+    }
+  }
   .listHeader {
     margin-top: 10px;
     float: right;
