oneAPI UI improvements

--- a/packages/code-space-mfe/src/components/deployModal/DeployModal.scss
+++ b/packages/code-space-mfe/src/components/deployModal/DeployModal.scss
@@ -13,6 +13,10 @@
     >div {
       width: calc(50% - 7px);
     }
+
+    .oneAPILink{
+      align-self: center;
+    }
   }
 
   .threeColumnFlexLayout {
